# swagger.json
@@ -244,6 +244,10 @@
           "type": "string",
           "description": "Text field for html with Preparations / Förberedelser (KIP - via kurs pm admin)"
         },
+        "software": {
+          "type": "string",
+          "description": "Text field for html with Software / Programvara (KIP - via kurs pm admin)"
+        },
         "equipment": {
           "type": "string",
           "description": "Text field for html with Equipment / Utrustning (kopps kursinformation)"
